# chess-reasoner

./: .gitignore  .gitmodules  CLAUDE.md  README.md  chess_grpo.py  chess_grpo_clean.py  convert_dset.py  debug_split_error.py  eval_hf.py  pyproject.toml  requirements.txt  test_model.py
